# quipped

./: README.md  app.py  assetlinks.json  requirements.txt
.github/workflows/: main_quip.yml
game/: pyproject.toml
src/: README.md  pyproject.toml
src/game/: app.py
static/: manifest.json
static/js/: sw.js
static/styles/: main.css
templates/: index.html
