[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["kloeffler95 <kevin.loeffler@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
